--- a/layouts/page.html.twig
+++ b/layouts/page.html.twig
@@ -3,8 +3,8 @@
   <head>
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1">
+    {{ include('partials/metatags.html.twig') }}
     <link rel="stylesheet" href="{{ asset('scss/styles.scss') }}">
-    <title>{{ site.title }}</title>
   </head>
   <body>
     <div class="container py-4 px-3 mx-auto">
