--- a/layouts/page.html.twig
+++ b/layouts/page.html.twig
@@ -4,7 +4,7 @@
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1">
     {{ include('partials/metatags.html.twig') }}
-    <link rel="stylesheet" href="{{ asset('scss/styles.scss') }}">
+    <link rel="stylesheet" href="{{ url(asset('scss/styles.scss')) }}">
   </head>
   <body>
     <div class="container py-4 px-3 mx-auto">
