--- a/layouts/page.html.twig
+++ b/layouts/page.html.twig
@@ -3,12 +3,11 @@
   <head>
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1">
-    {{ include('partials/metatags.html.twig') }}
+    {{- include('partials/metatags.html.twig') ~}}
     <link rel="stylesheet" href="{{ url(asset('scss/styles.scss')) }}">
   </head>
   <body>
     <div class="container py-4 px-3 mx-auto">
-
       <header class="d-flex justify-content-between align-items-md-center pb-3 mb-5 border-bottom">
         <h1 class="h4">
           <a href="{{ url(site.home) }}" class="d-flex align-items-center text-dark text-decoration-none">
@@ -21,7 +20,6 @@
         </h1>
         <a href="https://github.com/twbs/examples/tree/main/icons-font/" target="_blank" rel="noopener">View on GitHub</a>
       </header>
-
       <h1>Bootstrap Icons Font</h1>
       <div class="col-lg-8 px-0">
         <p class="fs-4">
@@ -29,12 +27,9 @@
           This example is built with the Bootstrap Icons icon font, installed via npm and compiled with Sass.
         </p>
       </div>
-
       <hr class="col-1 my-5 mx-0">
-
       <h2>Example icons</h2>
       <p>Customize the <code>color</code> with Bootstrap's text utilities or your own styles. Change the size with Bootstrap's <code>font-size</code> utilities or your own styles.</p>
-
       <div class="d-flex gap-4 flex-wrap fs-1 mt-4 mb-5">
         <div class="px-4 py-3 bg-light rounded-2"><i class="bi bi-boombox text-primary"></i></div>
         <div class="px-4 py-3 bg-light rounded-2"><i class="bi bi-twitter text-info"></i></div>
@@ -48,9 +43,7 @@
         <div class="px-4 py-3 bg-light rounded-2"><i class="bi bi-car-front-fill"></i></div>
         <div class="px-4 py-3 bg-light rounded-2"><i class="bi bi-person-circle"></i></div>
       </div>
-
       <hr class="mt-5 mb-4">
-
       <p class="text-muted">Created and open sourced by the Bootstrap team. Licensed MIT.</p>
     </div>
   </body>
